// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba de <GifGrid/> debe de mostrar el componente correctamente 1`] = `
<Fragment>
  <h3>
    Un titulo
  </h3>
  <p>
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Prueba de <GifGrid/> debe mostrar items cuando se cargan imagenes de useFetchGifs 1`] = `
<Fragment>
  <h3>
    Un titulo
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;
